assets/theme.css
/* ... */
.group:hover .group-hover\:scale-105{
  --tw-scale-x: 1.05;
  --tw-scale-y: 1.05;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.group:hover .group-hover\:text-white{
  --tw-text-opacity: 1;
  color: rgb(255 255 255 / var(--tw-text-opacity));
}

.group:hover .group-hover\:text-zinc-500{
  --tw-text-opacity: 1;
  color: rgb(113 113 122 / var(--tw-text-opacity));
}

.group:hover .group-hover\:text-zinc-600{
  --tw-text-opacity: 1;
  color: rgb(82 82 91 / var(--tw-text-opacity));
}

.group:hover .group-hover\:opacity-0{
  opacity: 0;
}

.group:hover .group-hover\:opacity-100{
  opacity: 1;
}

@media (min-width: 32em){
  .sm\:left-1\/2{
    left: 50%;
  }

  .sm\:right-auto{
    right: auto;
  }

  .sm\:mb-4{
    margin-bottom: 1rem;
  }

  .sm\:inline{
    display: inline;
  }

  .sm\:h-14{
    height: 3.5rem;
  }

  .sm\:h-\[24px\]{
    height: 24px;
  }

  .sm\:h-\[380px\]{
    height: 380px;
  }

  .sm\:h-auto{
    height: auto;
  }

  .sm\:max-h-\[90vh\]{
    max-height: 90vh;
  }

  .sm\:w-14{
    width: 3.5rem;
  }

  .sm\:w-\[24px\]{
    width: 24px;
  }

  .sm\:w-auto{
    width: auto;
  }

  .sm\:max-w-xs{
    max-width: 20rem;
  }

  .sm\:-translate-x-1\/2{
    --tw-translate-x: -50%;
    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
  }

  .sm\:animate-none{
    animation: none;
  }

  .sm\:grid-cols-2{
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }

  .sm\:flex-row{
    flex-direction: row;
  }

  .sm\:items-center{
    align-items: center;
  }

  .sm\:gap-4{
    gap: 1rem;
  }

  .sm\:gap-6{
    gap: 1.5rem;
  }

  .sm\:gap-x-6{
    -moz-column-gap: 1.5rem;
         column-gap: 1.5rem;
  }

  .sm\:gap-y-12{
    row-gap: 3rem;
  }

  .sm\:rounded-3xl{
    border-radius: 1.5rem;
  }

  .sm\:p-4{
    padding: 1rem;
  }

  .sm\:px-6{
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }

  .sm\:text-3xl{
    font-size: 1.875rem;
    line-height: 2.25rem;
  }

  .sm\:text-6xl{
    font-size: 3.75rem;
    line-height: 1;
  }

  .sm\:text-\[10px\]{
    font-size: 10px;
  }

  .sm\:text-\[11px\]{
    font-size: 11px;
  }

  .sm\:text-\[15px\]{
    font-size: 15px;
  }

  .sm\:text-\[17px\]{
    font-size: 17px;
  }

  .sm\:text-base{
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 48em){
  .md\:mt-0{
    margin-top: 0px;
  }

  .md\:block{
    display: block;
  }

  .md\:inline{
    display: inline;
  }

  .md\:hidden{
    display: none;
  }

  .md\:cursor-default{
    cursor: default;
  }

  .md\:grid-cols-2{
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }

  .md\:flex-row{
    flex-direction: row;
  }

  .md\:items-end{
    align-items: flex-end;
  }

  .md\:p-16{
    padding: 4rem;
  }

  .md\:p-8{
    padding: 2rem;
  }

  .md\:px-16{
    padding-left: 4rem;
    padding-right: 4rem;
  }

  .md\:py-16{
    padding-top: 4rem;
    padding-bottom: 4rem;
  }

  .md\:text-3xl{
    font-size: 1.875rem;
    line-height: 2.25rem;
  }

  .md\:text-4xl{
    font-size: 2.25rem;
    line-height: 2.5rem;
  }

  .md\:text-5xl{
    font-size: 3rem;
    line-height: 1;
  }

  .md\:text-7xl{
    font-size: 4.5rem;
    line-height: 1;
  }

  .md\:text-lg{
    font-size: 1.125rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 64em){
  .lg\:col-span-2{
    grid-column: span 2 / span 2;
  }

  .lg\:col-span-5{
    grid-column: span 5 / span 5;
  }

  .lg\:col-span-6{
    grid-column: span 6 / span 6;
  }

  .lg\:col-span-7{
    grid-column: span 7 / span 7;
  }

  .lg\:flex{
    display: flex;
  }

  .lg\:hidden{
    display: none;
  }

  .lg\:h-16{
    height: 4rem;
  }

  .lg\:w-1\/2{
    width: 50%;
  }

  .lg\:w-16{
    width: 4rem;
  }

  .lg\:grid-cols-12{
    grid-template-columns: repeat(12, minmax(0, 1fr));
  }

  .lg\:grid-cols-3{
    grid-template-columns: repeat(3, minmax(0, 1fr));
  }

  .lg\:grid-cols-4{
    grid-template-columns: repeat(4, minmax(0, 1fr));
  }

  .lg\:flex-row{
    flex-direction: row;
  }

  .lg\:gap-8{
    gap: 2rem;
  }

  .lg\:overflow-hidden{
    overflow: hidden;
  }

  .lg\:overflow-y-auto{
    overflow-y: auto;
  }

  .lg\:px-16{
    padding-left: 4rem;
    padding-right: 4rem;
  }

  .lg\:px-8{
    padding-left: 2rem;
    padding-right: 2rem;
  }

  .lg\:py-5{
    padding-top: 1.25rem;
    padding-bottom: 1.25rem;
  }

  .lg\:text-4xl{
    font-size: 2.25rem;
    line-height: 2.5rem;
  }
}

@media (min-width: 80em){
  .xl\:grid-cols-4{
    grid-template-columns: repeat(4, minmax(0, 1fr));
  }
}

